@@ -10,6 +10,12 @@ not yet  BJH  Release 10.50.00
 
               pnmconvol: Add -normalize .
 
+              libnetpbm: Add PNM_GETR(), PNM_GETG(), PNM_GETB().  Same
+              as PPM_GETR(), etc.
+
+              libnetpbm: Add ppm_luminosity().  Same as PPM_LUMIN, but
+              returns pixval.
+
               pnmhisteq: slight speedup.  Thanks Thomas Baruchel.
 
               libppmd/ppmpat: fix wild pointer in ppmd_fill_drawprocp();
